# hg-pimba

./: CMakeLists.txt  config.ini  desert.json
assets/: map.json  tileset.jb  tileset.json
cmm/: CMakeLists.txt
cmm/include/cmm/: bit_ops.hpp  buffer.hpp  byte.hpp  error.hpp  is_pot.hpp  multi_pool.hpp  optional.hpp  result.hpp  span.hpp  unused.hpp  version.hpp
cmm/include/cmm/jb/: parser.hpp  writer.hpp
cmm/include/cmm/mem/: align.hpp  linear_allocator.hpp  pool_allocator.hpp
cmm/include/cmm/zip/: headers.hpp  reader.hpp
cmm/src/jb/: parser.cpp  writer.cpp
cmm/test/: CMakeLists.txt  bit_ops.cpp  buffer.cpp  byte.cpp  is_pot.cpp  optional.cpp  result.cpp  span.cpp  unused.cpp
cmm/test/jb/: parser.cpp  writer.cpp
cmm/test/mem/: align.cpp  linear_allocator.cpp
cmm/tools/: CMakeLists.txt  jbdump.cpp
lgf/: CMakeLists.txt
lgf/include/lgf/: buffer_access.hpp  clear_mode.hpp  command_list.hpp  commands.hpp  idx_buffer.hpp  image.hpp  lgf.hpp  shader.hpp  shader_source.hpp  sort_key.hpp  texture.hpp  viewport.hpp  vtx_buffer.hpp  vtx_decl.hpp  vtx_range.hpp  vtx_usage.hpp
lgf/include/lgf/internal/: handle_owner.hpp
lgf/src/: log.cpp  log.hpp
lgf/src/opengl/: backends.cpp  backends.hpp  command_list.cpp  commands_backend.hpp  lgf.cpp  opengl.cpp  opengl.hpp  shader.cpp  shader_backend.hpp  texture.cpp  texture_backend.hpp  to_gl.hpp  vtx_buffer.cpp  vtx_buffer_backend.hpp
lgf/test/: CMakeLists.txt  test_context.cpp  test_context.hpp  vtx_buffer.cpp  vtx_decl.cpp  vtx_range.cpp
lgf/test/internal/: handle_owner.cpp
pimba/: CMakeLists.txt
pimba/src/SDL2/: file_system.cpp  file_system.hpp  main.cpp
pmb/: CMakeLists.txt
pmb/include/pmb/: engine.hpp  resource.hpp  shader_store.hpp  tileset.hpp
pmb/include/pmb/2d/: rect.hpp  sprite.hpp  sprite_batcher.hpp  sprite_sheet.hpp  tile_calc.hpp  tile_sheet.hpp  tilemap.hpp
pmb/include/pmb/anim/: clip.hpp  cursor.hpp  track.hpp
pmb/include/pmb/ecs/: entity.hpp
pmb/include/pmb/formats/: tilemap.hpp  tileset.hpp  version.hpp
pmb/include/pmb/fs/: asset.hpp  file_system.hpp
pmb/include/pmb/parsers/: sprite_parser.hpp  sprite_sheet_parser.hpp
pmb/src/: engine.cpp  resource.cpp  shader_store.cpp
pmb/src/2d/: sprite_batcher.cpp
pmb/src/anim/: clip.cpp
pmb/src/formats/: tilemap.cpp  tileset.cpp
pmb/src/parsers/: sprite_parser.cpp  sprite_sheet_parser.cpp
pmb/test/: CMakeLists.txt
pmb/test/2d/: rect.cpp  sprite.cpp  sprite_batcher_writer.cpp
pmb/test/anim/: clip.cpp  cursor.cpp
pmb/test/fs/: file_system.cpp
pmb/test/parsers/: sprite_parser.cpp
pmb/tools/: CMakeLists.txt
pmb/tools/pmbc/: CMakeLists.txt  main.cpp  tiled.cpp  tiled.hpp  tileset_command.cpp  tileset_command.hpp
